--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,10 +14,10 @@
             android:key="@string/edittext_preference"
             android:summary="一个使用了编辑文本对话框的例子"
             android:title="请输入你喜欢的种族"/>
-        <ListPreference
-            android:key="@string/list_preference"
-            android:dialogTitle="请选择一项"
-            android:entries="@array/list_kind"/>
+        <!--<ListPreference-->
+            <!--android:key="@string/list_preference"-->
+            <!--android:dialogTitle="请选择一项"-->
+            <!--android:entries="@array/list_kind"/>-->
     </PreferenceCategory>
 
     <PreferenceCategory
